Add Exercise26 to hold objects package